// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingsWidget component renders correctly 1`] = `
<div
  className="ratings-and-reviews"
>
  <div
    className="ratings"
  >
    <h4>
      Ratings & Reviews
    </h4>
    <div
      className="ratings-summary"
    >
      <h2>
        NaN
      </h2>
      <div
        className="starComponent"
      >
        <div>
          <div
            className="star-rating-input"
          >
            <div
              className="starContainer"
              style={
                Object {
                  "alignItems": "center",
                  "display": "inline-flex",
                  "paddingLeft": "0.5rem",
                  "position": "relative",
                }
              }
            >
              <div
                className="starBase"
                style={
                  Object {
                    "display": "flex",
                    "width": "100%",
                  }
                }
              >
                <svg
                  className="star"
                  enableBackground="new 0 0 24 24"
                  fill="#f8d448"
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <rect
                      fill="none"
                      height="24"
                      width="24"
                      x="0"
                    />
                    <polygon
                      id={1}
                      onClick={[Function]}
                      points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                      stroke="#646464"
                    />
                  </g>
                </svg>
                <svg
                  className="star"
                  enableBackground="new 0 0 24 24"
                  fill="#f8d448"
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <rect
                      fill="none"
                      height="24"
                      width="24"
                      x="0"
                    />
                    <polygon
                      id={2}
                      onClick={[Function]}
                      points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                      stroke="#646464"
                    />
                  </g>
                </svg>
                <svg
                  className="star"
                  enableBackground="new 0 0 24 24"
                  fill="#f8d448"
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <rect
                      fill="none"
                      height="24"
                      width="24"
                      x="0"
                    />
                    <polygon
                      id={3}
                      onClick={[Function]}
                      points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                      stroke="#646464"
                    />
                  </g>
                </svg>
                <svg
                  className="star"
                  enableBackground="new 0 0 24 24"
                  fill="#f8d448"
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <rect
                      fill="none"
                      height="24"
                      width="24"
                      x="0"
                    />
                    <polygon
                      id={4}
                      onClick={[Function]}
                      points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                      stroke="#646464"
                    />
                  </g>
                </svg>
                <svg
                  className="star"
                  enableBackground="new 0 0 24 24"
                  fill="#f8d448"
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <rect
                      fill="none"
                      height="24"
                      width="24"
                      x="0"
                    />
                    <polygon
                      id={5}
                      onClick={[Function]}
                      points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                      stroke="#646464"
                    />
                  </g>
                </svg>
              </div>
              <div
                className="starOverlay"
                style={
                  Object {
                    "backgroundColor": "white",
                    "bottom": "0",
                    "mixBlendMode": "color",
                    "opacity": "unset",
                    "pointerEvents": "none",
                    "position": "absolute",
                    "right": "0",
                    "top": "0",
                    "width": "NaN%",
                    "zIndex": "1",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
      <p>
        % of the reviews recommend this product
      </p>
    </div>
    <div
      className="ratings-breakdown"
    >
      <div
        className="ratings-breakdown-bar"
        id={1}
        onClick={[Function]}
      >
        <div
          className="star-label"
        >
          1 stars
        </div>
        <svg
          style={
            Object {
              "fill": "grey",
              "pointerEvents": "none",
            }
          }
          viewBox="0 0 100 5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="5"
            width="100%"
          />
          <rect
            height="5"
            style={
              Object {
                "fill": "green",
                "pointerEvents": "none",
                "zIndex": "1",
              }
            }
            width="0%"
          />
        </svg>
        <div
          className="review-number-label"
        >
          0
        </div>
      </div>
      <div
        className="ratings-breakdown-bar"
        id={2}
        onClick={[Function]}
      >
        <div
          className="star-label"
        >
          2 stars
        </div>
        <svg
          style={
            Object {
              "fill": "grey",
              "pointerEvents": "none",
            }
          }
          viewBox="0 0 100 5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="5"
            width="100%"
          />
          <rect
            height="5"
            style={
              Object {
                "fill": "green",
                "pointerEvents": "none",
                "zIndex": "1",
              }
            }
            width="0%"
          />
        </svg>
        <div
          className="review-number-label"
        >
          0
        </div>
      </div>
      <div
        className="ratings-breakdown-bar"
        id={3}
        onClick={[Function]}
      >
        <div
          className="star-label"
        >
          3 stars
        </div>
        <svg
          style={
            Object {
              "fill": "grey",
              "pointerEvents": "none",
            }
          }
          viewBox="0 0 100 5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="5"
            width="100%"
          />
          <rect
            height="5"
            style={
              Object {
                "fill": "green",
                "pointerEvents": "none",
                "zIndex": "1",
              }
            }
            width="0%"
          />
        </svg>
        <div
          className="review-number-label"
        >
          0
        </div>
      </div>
      <div
        className="ratings-breakdown-bar"
        id={4}
        onClick={[Function]}
      >
        <div
          className="star-label"
        >
          4 stars
        </div>
        <svg
          style={
            Object {
              "fill": "grey",
              "pointerEvents": "none",
            }
          }
          viewBox="0 0 100 5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="5"
            width="100%"
          />
          <rect
            height="5"
            style={
              Object {
                "fill": "green",
                "pointerEvents": "none",
                "zIndex": "1",
              }
            }
            width="0%"
          />
        </svg>
        <div
          className="review-number-label"
        >
          0
        </div>
      </div>
      <div
        className="ratings-breakdown-bar"
        id={5}
        onClick={[Function]}
      >
        <div
          className="star-label"
        >
          5 stars
        </div>
        <svg
          style={
            Object {
              "fill": "grey",
              "pointerEvents": "none",
            }
          }
          viewBox="0 0 100 5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="5"
            width="100%"
          />
          <rect
            height="5"
            style={
              Object {
                "fill": "green",
                "pointerEvents": "none",
                "zIndex": "1",
              }
            }
            width="0%"
          />
        </svg>
        <div
          className="review-number-label"
        >
          0
        </div>
      </div>
      <div />
      <a
        onClick={[Function]}
      />
    </div>
    <div
      className="ratings-product-breakdown"
    />
  </div>
  <div
    className="reviews"
  >
    <input
      onChange={[Function]}
      type="text"
    />
    <div
      className="reviews-sorting"
    >
      <label
        htmlFor="sorting-option"
      >
        0
         reviews, sorted by 
      </label>
      <select
        name="sorting-option"
        onChange={[Function]}
      >
        <option
          value="relevant"
        >
          relevant
        </option>
        <option
          value="helpful"
        >
          helpful
        </option>
        <option
          value="newest"
        >
          newest
        </option>
      </select>
    </div>
    <div
      className="reviews-list"
    />
    <div
      className="reviews-buttons"
    >
      <button
        onClick={[Function]}
      >
        ADD A REVIEW + 
      </button>
    </div>
  </div>
</div>
`;

exports[`ReviewTile component renders correctly 1`] = `
<div
  className="review-tile"
>
  <div
    className="review-header"
  >
    <div
      className="starComponent"
    >
      <div>
        <div
          className="star-rating-input"
        >
          <div
            className="starContainer"
            style={
              Object {
                "alignItems": "center",
                "display": "inline-flex",
                "paddingLeft": "0.5rem",
                "position": "relative",
              }
            }
          >
            <div
              className="starBase"
              style={
                Object {
                  "display": "flex",
                  "width": "100%",
                }
              }
            >
              <svg
                className="star"
                enableBackground="new 0 0 24 24"
                fill="#f8d448"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <rect
                    fill="none"
                    height="24"
                    width="24"
                    x="0"
                  />
                  <polygon
                    id={1}
                    onClick={[Function]}
                    points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                    stroke="#646464"
                  />
                </g>
              </svg>
              <svg
                className="star"
                enableBackground="new 0 0 24 24"
                fill="#f8d448"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <rect
                    fill="none"
                    height="24"
                    width="24"
                    x="0"
                  />
                  <polygon
                    id={2}
                    onClick={[Function]}
                    points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                    stroke="#646464"
                  />
                </g>
              </svg>
              <svg
                className="star"
                enableBackground="new 0 0 24 24"
                fill="#f8d448"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <rect
                    fill="none"
                    height="24"
                    width="24"
                    x="0"
                  />
                  <polygon
                    id={3}
                    onClick={[Function]}
                    points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                    stroke="#646464"
                  />
                </g>
              </svg>
              <svg
                className="star"
                enableBackground="new 0 0 24 24"
                fill="#f8d448"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <rect
                    fill="none"
                    height="24"
                    width="24"
                    x="0"
                  />
                  <polygon
                    id={4}
                    onClick={[Function]}
                    points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                    stroke="#646464"
                  />
                </g>
              </svg>
              <svg
                className="star"
                enableBackground="new 0 0 24 24"
                fill="#f8d448"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <rect
                    fill="none"
                    height="24"
                    width="24"
                    x="0"
                  />
                  <polygon
                    id={5}
                    onClick={[Function]}
                    points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                    stroke="#646464"
                  />
                </g>
              </svg>
            </div>
            <div
              className="starOverlay"
              style={
                Object {
                  "backgroundColor": "white",
                  "bottom": "0",
                  "mixBlendMode": "color",
                  "opacity": "unset",
                  "pointerEvents": "none",
                  "position": "absolute",
                  "right": "0",
                  "top": "0",
                  "width": "40%",
                  "zIndex": "1",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="right-corner"
    >
      shortandsweeet, April 13, 2019
    </div>
  </div>
  <h3
    className="review-summary"
  >
    I'm enjoying wearing these shades
  </h3>
  <div
    className="review-main"
  >
    <div
      className="review-body"
    >
      <p>
        Comfortable and practical.
      </p>
    </div>
    <div
      className="thumbnail-display"
    >
      <div>
        <img
          alt="Review photo 1 submitted by: shortandsweeet"
          className="review-image"
          id="shortandsweeet_1"
          onClick={[Function]}
          src="https://images.unsplash.com/photo-1560570803-7474c0f9af99?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80"
        />
      </div>
      <div>
        <img
          alt="Review photo 2 submitted by: shortandsweeet"
          className="review-image"
          id="shortandsweeet_2"
          onClick={[Function]}
          src="https://images.unsplash.com/photo-1560570803-7474c0f9af99?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80"
        />
      </div>
    </div>
    <div
      className="recommend"
    >
      ☑ I recommend this product
    </div>
    <div
      className="review-helpfulness-voting"
    >
      <p>
        Helpful? 
        <a
          onClick={[Function]}
        >
           Yes
        </a>
         (
        5
        )
      </p>
    </div>
  </div>
</div>
`;

exports[`Reviews component renders correctly 1`] = `
<div
  className="reviews"
>
  <input
    onChange={[Function]}
    type="text"
  />
  <div
    className="reviews-sorting"
  >
    <label
      htmlFor="sorting-option"
    >
      0
       reviews, sorted by 
    </label>
    <select
      name="sorting-option"
    >
      <option
        value="relevant"
      >
        relevant
      </option>
      <option
        value="helpful"
      >
        helpful
      </option>
      <option
        value="newest"
      >
        newest
      </option>
    </select>
  </div>
  <div
    className="reviews-list"
  />
  <div
    className="reviews-buttons"
  >
    <button
      onClick={[Function]}
    >
      ADD A REVIEW + 
    </button>
  </div>
</div>
`;

exports[`ReviewsList component renders correctly 1`] = `
Array [
  <input
    onChange={[Function]}
    type="text"
  />,
  <div
    className="reviews-sorting"
  >
    <label
      htmlFor="sorting-option"
    >
      0
       reviews, sorted by 
    </label>
    <select
      name="sorting-option"
    >
      <option
        value="relevant"
      >
        relevant
      </option>
      <option
        value="helpful"
      >
        helpful
      </option>
      <option
        value="newest"
      >
        newest
      </option>
    </select>
  </div>,
  <div
    className="reviews-list"
  />,
  <div
    className="reviews-buttons"
  >
    <button
      onClick={[Function]}
    >
      ADD A REVIEW + 
    </button>
  </div>,
]
`;

exports[`ReviewsSorting component renders correctly 1`] = `
<div
  className="reviews-sorting"
>
  <label
    htmlFor="sorting-option"
  >
     reviews, sorted by 
  </label>
  <select
    name="sorting-option"
  >
    <option
      value="relevant"
    >
      relevant
    </option>
    <option
      value="helpful"
    >
      helpful
    </option>
    <option
      value="newest"
    >
      newest
    </option>
  </select>
</div>
`;
